# motor_controller

./: Motor_Control_test.ipynb  Untitled.ipynb  pyproject.toml
MCC2_Demo_GUI/: UMCC2_Demo_GUI.py
MCC2_Demo_GUI/GUI_form/: MotorControllerDemo.qbs  mainwindow.ui
MCC2_Demo_GUI/GUI_form/ConfigTable/: ConfigTable.qbs  configtable.cpp  configtable.h  configtable.ui  main.cpp
MCC2_Demo_GUI/data/: PMotoren_Positionen.txt  PSoft_Limits.txt  saved_motors_data.txt  saved_session_data.txt
MCC2_Demo_GUI/input/: Emulator_config.csv  Phytron_Motoren_config.csv  Phytron_Motoren_config.numbers  Phytron_Motoren_config0.csv  Phytron_Motoren_config1.csv  Phytron_Motoren_config2.csv  Phytron_Motoren_config3.csv
motor_controller/: MotorControllerInterface.py  Phytron_MCC2.py  SmarAct_MCS2.py  Untitled.ipynb  __init__.py
motor_controller/Phytron_MCC2/: Phytron_MCC2.py  __init__.py
motor_controller/SmarAct_MCS/: SmarAct_MCS.py  __init__.py
motor_controller/SmarAct_MCS2/: SmarAct_MCS2.py  __init__.py
motor_controller/Thorlabs/: Thorlabs.py  __init__.py
motor_controller/interface/: interface.py
tests/: __init__.py  test_MotorControllerInterface.py  test_Phytron_MCC2.py
tests/test_data/: test_saved_motors_data.txt  test_saved_motors_data2.txt  test_saved_motors_data3.txt
tests/test_input/: test_input_calibr.csv  test_input_data(Vorlage).csv  test_input_file.csv  test_input_file2.csv  test_input_file3.csv  test_path.csv  test_positions.csv  test_positions_saved.csv  test_positions_wrong.csv
