[tool.poetry]
name = "motor_controller"
version = "0.1.0"
description = ""
authors = ["Vladimir Usatikov <vladimir@usatikov.com>"]

[tool.poetry.dependencies]
python = "^3.10"
logscolor = {git = "https://github.com/v-usatikov/logscolor.git"}
pyserial = "^3"
timeout-decorator = "^0"
#PyQt5 = "^5"
pyqt-led = "^0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
