[tool.poetry]
name = "motor_controller"
version = "0.1.14"
description = ""
authors = ["Vladimir Usatikov <vladimir@usatikov.com>"]

[tool.poetry.dependencies]
python = "^3.10"
logscolor = {git = "https://github.com/v-usatikov/logscolor.git"}
pyserial = ">=3"
timeout-decorator = "*"
#PyQt5 = "^5"
pyqt-led = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
