[tool.poetry]
name = "motor_controller"
version = "0.1.15"
description = ""
authors = ["Vladimir Usatikov <vladimir@usatikov.com>"]

[tool.poetry.dependencies]
python = "^3.12"
logscolor = {git = "https://github.com/v-usatikov/logscolor.git"}
pyserial = ">=3"
timeout-decorator = "*"
#PyQt5 = "^5"
pyqt-led = "*"
thorlabs-apt-device = "^0.3.5"
thorlabs-apt = "^0.2"
pandas = "^2.2.0"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
